crates/rome_js_formatter/tests/specs/prettier/js/v8_intrinsic/intrinsic_call.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
function doSmth()     {
            %DebugPrint
        (
                foo )
  }

    function printFunc  (
        f
) {
    if(%
    IsAsmWasmCode(f))              console.log("asm.js");
        if(

        % IsWasmCode(
        f))
            console.log (
                "wasm"
            );

    console.log
    (%
        GetFunctioName(f)
        );
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,10 +1,22 @@
 function doSmth() {
-  %DebugPrint(foo);
+  %DebugPrint
+        (
+                foo )
 }
 
 function printFunc(f) {
-  if (%IsAsmWasmCode(f)) console.log("asm.js");
-  if (%IsWasmCode(f)) console.log("wasm");
+  if(%
+    IsAsmWasmCode(f))              console.log("asm.js");
+  if(
+
+        % IsWasmCode(
+        f))
+            console.log (
+                "wasm"
+            );
 
-  console.log(%GetFunctioName(f));
+  console.log
+    (%
+        GetFunctioName(f)
+        );
 }
```

# Output

```js
function doSmth() {
  %DebugPrint
        (
                foo )
}

function printFunc(f) {
  if(%
    IsAsmWasmCode(f))              console.log("asm.js");
  if(

        % IsWasmCode(
        f))
            console.log (
                "wasm"
            );

  console.log
    (%
        GetFunctioName(f)
        );
}
```


# Errors
```
error[SyntaxError]: expected a statement but instead found '%DebugPrint
        (
                foo )'
  ┌─ intrinsic_call.js:2:13
  │  
2 │ ┌             %DebugPrint
3 │ │         (
4 │ │                 foo )
  │ └─────────────────────^ Expected a statement here

error[SyntaxError]: Expected an expression for the left hand side of the `%` operator.
   ┌─ intrinsic_call.js:10:8
   │
10 │     if(%
   │        ^ This operator requires a left hand side value

error[SyntaxError]: Expected an expression for the left hand side of the `%` operator.
   ┌─ intrinsic_call.js:14:9
   │
14 │         % IsWasmCode(
   │         ^ This operator requires a left hand side value

error[SyntaxError]: Expected an expression for the left hand side of the `%` operator.
   ┌─ intrinsic_call.js:21:6
   │
21 │     (%
   │      ^ This operator requires a left hand side value


```


